# strava-viewer

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  sonar-project.properties
.github/: CODEOWNERS
.github/workflows/: ci.yml
strava_extensions/flask_server/: main.py
strava_extensions/flask_server/templates/: index.html
strava_extensions/strava/: api.py  settings.py
strava_extensions/strava/services/: activities_services.py
strava_extensions/strava/utils/: redis_client.py
strava_viewer/: .env.example  __init__.py
strava_viewer/flask_server/: main.py
strava_viewer/flask_server/static/css/: site.css
strava_viewer/flask_server/static/favicon/: site.webmanifest
strava_viewer/flask_server/templates/: _navbar.html  _sidebar.html  activity_list.html  base.html  config.html  dashboard.html  data_lab.html  index.html
strava_viewer/strava/: api.py  credentials.py  dto.py  schemas.py  settings.py
strava_viewer/strava/models/: activities.py  athletes.py
strava_viewer/strava/schemas/: activities_schemas.py  athletes_schemas.py
strava_viewer/strava/services/: activities_services.py  builder_service.py  metrics_services.py
strava_viewer/strava/utils/: materialize_mapping_utils.py  redis_client.py
strava_viewer/utils/: logger_utils.py  mixins.py
tests/: conftest.py  test_strava_extension.py
tests/flask_server/: test_main.py
tests/strava/: test_api.py  test_schemas.py
tests/strava/models/: test_activities.py
tests/strava/services/: test_activities_services.py  test_builder_service.py  test_metrics_services.py
tests/strava/utils/: test_materialize_mapping_utils.py
