[tool.poetry]
name = "strava-viewer"
version = "0.4.0"
description = ""
authors = ["Ariel Parra <darkaico@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28"
dacite = "^1.6"
marshmallow = "^3.14"
python-dotenv = "^0.21"
flask = "^2.2"
Flask-WTF = "^1.0"
redis = "^4.3"

[tool.poetry.dev-dependencies]
pytest = "^7.2"
pytest-mock = "^3.10"
faker = "^15.3"
pytest-cov = "^4.0"
ipdb = "^0.13"
black = "^22.10"
pre-commit = "^2.20"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
